# kahf

./: .gitignore  .mcp.json  Cargo.toml
.claude/: claude.md  settings.local.json
.claude/hooks/: check-file-header.sh  check-no-inline-comments.sh  check-syncfusion-ui.sh
crates/kahf-auth/: Cargo.toml
crates/kahf-auth/src/: email.rs  jwt.rs  lib.rs  middleware.rs  password.rs  service.rs
crates/kahf-auth/tests/: integration.rs
crates/kahf-core/: Cargo.toml
crates/kahf-core/src/: entity.rs  error.rs  event.rs  id.rs  lib.rs  pagination.rs  traits.rs
crates/kahf-db/: Cargo.toml
crates/kahf-db/migrations/: 002_users_workspaces.sql  003_tx_log.sql  004_entities.sql  005_crdt_docs.sql  006_email_verification.sql  007_otp_purpose.sql  008_invitations.sql  009_split_name_add_tenants.sql  010_job_audit.sql  011_password_history.sql  012_audit_log.sql  013_workspace_color.sql  014_refresh_tokens.sql  015_notification_preferences.sql  016_telegram_links.sql  017_push_subscriptions.sql  018_in_app_notifications.sql  019_telegram_link_codes.sql  020_workspace_invitations.sql
crates/kahf-db/src/: crdt_repo.rs  entity_repo.rs  event_store.rs  invite_repo.rs  lib.rs  notification_pref_repo.rs  notification_repo.rs  otp_repo.rs  password_history_repo.rs  pool.rs  push_subscription_repo.rs  refresh_token_repo.rs  session_repo.rs  telegram_link_code_repo.rs  telegram_link_repo.rs  tenant_repo.rs  user_repo.rs  workspace_repo.rs
crates/kahf-db/tests/: integration.rs
crates/kahf-email/: Cargo.toml
crates/kahf-email/src/: lib.rs
crates/kahf-email/templates/: base.html  invitation.html  password_reset.html
crates/kahf-notify/: Cargo.toml
crates/kahf-notify/src/: channel.rs  dispatch.rs  email.rs  lib.rs  otp.rs  telegram.rs  telegram_bot.rs  web_push.rs
crates/kahf-notify/templates/: otp_verification.html
crates/kahf-rbac/: Cargo.toml
crates/kahf-rbac/src/: enforcer.rs  lib.rs  model.rs  policy.rs
crates/kahf-realtime/: Cargo.toml
crates/kahf-realtime/src/: connection.rs  crdt.rs  event_bus.rs  hub.rs  lib.rs  presence.rs  protocol.rs
crates/kahf-server/: Cargo.toml
crates/kahf-server/src/: app_state.rs  audit.rs  config.rs  error.rs  lib.rs  main.rs
crates/kahf-server/src/routes/: auth.rs  entities.rs  health.rs  mod.rs  notifications.rs  telegram.rs  users.rs  workspaces.rs  ws.rs
crates/kahf-server/tests/: integration.rs
crates/kahf-worker/: Cargo.toml
crates/kahf-worker/src/: audit.rs  lib.rs
crates/kahf-worker/src/handlers/: audit.rs  email.rs  mod.rs  notification.rs  telegram.rs  web_push.rs
crates/kahf-worker/src/jobs/: audit.rs  email.rs  mod.rs  notification.rs  telegram.rs  web_push.rs
docker/: Caddyfile  docker-compose.prod.yml  docker-compose.yml  init-db.sql
frontend/: angular.json  bun.lockb  package.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app.routes.ts  app.ts
frontend/src/app/auth/auth-layout/: auth-layout.html  auth-layout.ts
frontend/src/app/auth/forgot-password/: forgot-password.html  forgot-password.ts
frontend/src/app/auth/login/: login.html  login.ts
frontend/src/app/auth/reset-password/: reset-password.html  reset-password.ts
frontend/src/app/auth/signup/: signup.html  signup.ts
frontend/src/app/auth/verify-otp/: verify-otp.html  verify-otp.ts
frontend/src/app/core/guards/: auth.guard.ts  guest.guard.ts  onboarding.guard.ts
frontend/src/app/core/services/: api.service.ts  auth.service.ts  notification.service.ts  user.service.ts  workspace.service.ts
frontend/src/app/layouts/: shell.html  shell.ts
frontend/src/app/modules/home/: home.ts
frontend/src/app/onboarding/: onboarding.html  onboarding.ts
frontend/src/app/settings/: settings.html  settings.ts
frontend/src/app/settings/account/: account.html  account.ts
frontend/src/app/settings/integrations/: integrations.html  integrations.ts
frontend/src/app/settings/members/: members.html  members.ts
frontend/src/app/settings/notifications/: notifications.html  notifications.ts
frontend/src/app/settings/password/: password.html  password.ts
frontend/src/app/settings/workspace-general/: workspace-general.html  workspace-general.ts
frontend/src/app/shared/components/password-strength/: password-strength.html  password-strength.ts
frontend/src/environments/: environment.prod.ts  environment.ts
scripts/: deploy.sh  dev.sh
