[package]
name = "kahf-auth"
description = "Authentication layer for the Kahf platform: Argon2 hashing, JWT tokens, axum middleware"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kahf-core = { workspace = true }
kahf-db = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
