[package]
name = "kahf-core"
description = "Domain types, traits, and error definitions for the KahfLane platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
