[package]
name = "kahf-db"
description = "PostgreSQL + TimescaleDB database layer for the KahfLane platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kahf-core = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
