[package]
name = "kahf-email"
description = "Email delivery and templating for the KahfLane platform: SMTP transport, Tera HTML templates, OTP generation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lettre = { workspace = true }
tera = "1"
rand = "0.9"
serde = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
