[package]
name = "kahf-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kahf"
path = "src/main.rs"

[dependencies]
kahf-core = { workspace = true }
kahf-db = { workspace = true }
kahf-auth = { workspace = true }
kahf-rbac = { workspace = true }
kahf-realtime = { path = "../kahf-realtime" }

axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }

sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
