[package]
name = "kahf-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kahf-notify = { workspace = true }
kahf-db = { workspace = true }

apalis = { workspace = true }
apalis-redis = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
tower = { version = "0.5", features = ["util"] }
